Fixed theme thumbnail issue on IE6. BugzID #102815

--- a/mt-static/css/hacks/ie.css
+++ b/mt-static/css/hacks/ie.css
@@ -181,6 +181,7 @@ ul.tabs li,
 
 /* - haslayout */
 ul.menu-nav, 
+.welcome-widget, 
 .favorite-blogs-widget .blog-content { 
     zoom: 1;
 }
